--- a/posts/2023-07-22-data-science-workflows-js-2/index.qmd
+++ b/posts/2023-07-22-data-science-workflows-js-2/index.qmd
@@ -10,7 +10,7 @@ categories: [Quarto, Javascript, data-viz, cluster-analysis] # self-defined cate
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
 image: penguin_plot.png
-draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 editor: 
   markdown: 
     wrap: 72
