updating text on landing page

--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ about:
       href: mailto:mickey.rafa3@gmail.com
 ---
 
-My name is Mickey – welcome to my personal portfolio website! I'm an analytics leader with nearly a decade of experience in high-growth environments, in both non-profit and for-profit organizations. I specialize in turning data into insights, improving the accessibility of dashboards and reports, and creating compelling data stories.
+My name is Mickey – welcome to my portfolio website! I'm an analytics leader with nearly a decade of experience in high-growth environments, in both non-profit and for-profit organizations. I specialize in turning data into insights, improving the accessibility of dashboards and reports, and creating compelling data stories.
 
 On this page, I include a selection of data science and viz projects that showcase the breadth of work that I've completed.
 
